--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
 }
 
 html {
   font-family: 'Montserrat', sans-serif;
+  position: relative;
 }
 body {
   background: #eee;
@@ -24,26 +24,6 @@ header h1 {
   font-weight: 200;
 }
 
-.note {
-  background: #fff;
-  border-radius: 7px;
-  box-shadow: 0 2px 5px #ccc;
-  padding: 10px;
-  width: 240px;
-  margin: 16px;
-  float: left;
-}
-.note h1 {
-  font-size: 1.1em;
-  margin-bottom: 6px;
-}
-.note p {
-  font-size: 1.1em;
-  margin-bottom: 10px;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-}
-
 /* Input  */
 .input-area {
   margin: 5% 5%;
@@ -60,11 +40,11 @@ header h1 {
 }
 
 .input-box h2 {
-  margin: 3% 0;
+  margin: 2% 0 12%;
 }
 
 .add-btn {
-  margin-top: 5%;
+  margin: 12% 0 3%;
   align-items: center;
   background-color: #fcfcfd;
   border-radius: 4px;
@@ -106,19 +86,6 @@ header h1 {
   transform: translateY(2px);
 }
 
-footer {
-  position: absolute;
-  text-align: center;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
-}
-
-footer p {
-  color: #ccc;
-}
-
-/* test */
 input,
 span,
 label,
@@ -127,6 +94,7 @@ textarea {
   padding: 5%;
   border: none;
   font-size: 1rem;
+  resize: none;
 }
 
 textarea:focus {
@@ -161,17 +129,17 @@ textarea.question + label {
 }
 
 textarea.question:focus + label {
-  width: 80%;
+  width: 100%;
 }
 
 textarea.question:valid,
 textarea.question:focus {
-  margin-top: 5%;
+  margin-top: 7%;
 }
 
 textarea.question:focus + label > span,
 textarea.question:valid + label > span {
-  top: -135px;
+  top: -150px;
   font-size: 1rem;
   color: #333;
 }
@@ -199,4 +167,48 @@ textarea.question + label > span {
   100% {
     opacity: 1;
   }
+}
+
+/* Note */
+
+.note {
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 0 2px 5px #ccc;
+  padding: 10px;
+  width: 240px;
+  margin: 16px;
+  float: left;
+  text-align: center;
+}
+
+.note p {
+  font-size: 1.1em;
+  padding: 3%;
+  margin-bottom: 10px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+.note button {
+  font-size: 1.1rem;
+  border: none;
+  background-color: transparent;
+  margin: 7%;
+  padding: 5%;
+  cursor: pointer;
+}
+
+/* Footer */
+
+footer {
+  position: absolute;
+  bottom: -12%;
+  width: 100%;
+  height: 2.5rem;
+  text-align: center;
+}
+
+footer p {
+  color: #ccc;
 }
