--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ header {
 }
 
 header h1 {
-  color: rgb(40, 43, 42);
+  color: #2c3333;
   font-weight: 900;
 }
 
@@ -186,8 +186,9 @@ textarea.question + label > span {
 
 .note p {
   font-size: 1.1em;
+  font-weight: 700;
   padding: 3%;
-  margin-bottom: 10px;
+  margin: 5% 0 3%;
   white-space: pre-wrap;
   word-wrap: break-word;
 }
@@ -201,6 +202,12 @@ textarea.question + label > span {
   cursor: pointer;
 }
 
+.pin {
+  position: absolute;
+  left: 140px;
+  height: 30px;
+}
+
 /* Footer */
 
 footer {
@@ -212,5 +219,5 @@ footer {
 }
 
 footer p {
-  color: #54bab9;
+  color: #876445;
 }
