--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,12 @@ html {
 }
 body {
   background: #e9dac1;
+  height: 95vh;
 }
 
 header {
   background-color: #f7ecde;
-  margin: auto -16px;
+  margin: 0 !important;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
@@ -35,7 +36,7 @@ header h1 {
   background: #ffe9ae;
   padding: 7%;
   border-radius: 4px;
-  border: 3px solid;
+  border: 2px solid;
   box-shadow: 0.5rem 0.5rem 0;
   text-align: center;
 }
@@ -47,7 +48,7 @@ header h1 {
 .add-btn {
   margin: 12% 0 3%;
   align-items: center;
-  background-color: #fcfcfd;
+  background-color: #f7ecde;
   border-radius: 4px;
   border-width: 0;
   box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
@@ -85,6 +86,29 @@ header h1 {
 .add-btn:active {
   box-shadow: #d6d6e7 0 3px 7px inset;
   transform: translateY(2px);
+}
+
+.add-btn p:hover {
+  animation: write 1.2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes write {
+  20% {
+    transform: translate(-2px, 0px) rotate(1deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  60% {
+    transform: translate(-2px, 1px) rotate(0deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
 
 input,
@@ -178,7 +202,7 @@ textarea.question + label > span {
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
   padding: 10px;
-  width: 240px;
+  width: 210px;
   margin: 16px;
   float: left;
   text-align: center;
@@ -210,17 +234,21 @@ textarea.question + label > span {
 
 #check:hover,
 #trash:hover {
-  transform: scale(1.3);
-  transition: 0.5s ease-in-out;
+  transform: scale(1.5);
+  transition: 0.3s ease-in-out;
+}
+
+.note-box {
+  position: relative;
 }
 
 /* Footer */
 
 footer {
   position: absolute;
-  bottom: -12%;
+  bottom: -5%;
   width: 100%;
-  height: 2.5rem;
+  height: 3rem;
   text-align: center;
 }
 
@@ -234,8 +262,8 @@ footer p {
   text-decoration: line-through;
 }
 
-.delete-animation {
-  animation: fallAway forwards 1s ease-out 1;
+.delete-animation-exit-active {
+  animation: fallAway forwards 1.5s ease-out 1;
 }
 
 @keyframes fallAway {
@@ -251,5 +279,17 @@ footer p {
     top: 300px;
     transform: rotateZ(-5deg);
     opacity: 0;
+  }
+}
+
+/* mobile responsive */
+
+@media screen and (max-width: 480px) {
+  .note-box {
+    display: grid;
+    justify-content: center;
+  }
+  footer {
+    bottom: 0;
   }
 }
