--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ header {
 }
 
 header h1 {
-  color: #2c3333;
+  color: #2c3639;
   font-weight: 900;
 }
 
@@ -33,16 +33,21 @@ header h1 {
   justify-content: center;
 }
 .input-box {
-  background: #ffe9ae;
+  transition: 0.3s ease-in-out;
   padding: 7%;
   border-radius: 4px;
   border: 2px solid;
-  box-shadow: 0.5rem 0.5rem 0;
+  box-shadow: 0.4rem 0.4rem 4px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
 
 .input-box h2 {
   margin: 2% 0 12%;
+}
+
+.color-btn {
+  cursor: pointer;
+  padding: 5px;
 }
 
 .add-btn {
@@ -88,7 +93,7 @@ header h1 {
   transform: translateY(2px);
 }
 
-.add-btn p:hover {
+.add-btn span:hover {
   animation: write 1.2s;
   animation-iteration-count: infinite;
 }
@@ -197,15 +202,29 @@ textarea.question + label > span {
 
 /* Note */
 
+.note-box {
+  position: relative;
+}
+
 .note {
-  background: #fff;
-  border-radius: 7px;
-  box-shadow: 0 2px 5px #ccc;
+  border: 2px solid;
   padding: 10px;
-  width: 210px;
-  margin: 16px;
   float: left;
   text-align: center;
+  transition: 0.3s ease;
+  width: 220px;
+  height: 100px;
+  margin: 6%;
+  background: #d3cedf;
+  color: black;
+  border-radius: 10px;
+  position: relative;
+  box-shadow: 0 0 2rem -1rem rgba(0, 0, 0, 0.5);
+}
+
+.note:hover {
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+  transform: scale(1.01);
 }
 
 .note p {
@@ -217,36 +236,70 @@ textarea.question + label > span {
   word-wrap: break-word;
 }
 
-.note button {
-  font-size: 1.1rem;
-  border: none;
-  background-color: transparent;
-  margin: 7%;
-  padding: 5%;
-  cursor: pointer;
+.note-btn {
+  z-index: -1;
+  position: absolute;
+  top: 1.3rem;
+  left: 1.3rem;
+  border-radius: 100%;
+  width: 0rem;
+  height: 0rem;
+  transform: translate(-50%, -50%);
+  transition: 0.25s cubic-bezier(0.25, 0, 0, 1);
 }
 
-.pin {
+.note-btn button {
+  display: grid;
+  place-items: center;
   position: absolute;
-  left: 140px;
-  height: 30px;
+  width: 2.3rem;
+  height: 2.3rem;
+  border: none;
+  border-radius: 100%;
+  background: white;
+  color: black;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  transition: 0.25s cubic-bezier(0.25, 0, 0, 1);
+  box-shadow: 0 0 0rem -0.25rem black;
+}
+
+.note-btn button:hover {
+  background: #2c3639;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+}
+.note-btn button:first-child:nth-last-child(1) {
+  left: 25%;
+  top: 25%;
+}
+.note-btn button:first-child:nth-last-child(2):nth-child(1),
+.note-btn button:first-child:nth-last-child(2) ~ *:nth-child(1) {
+  left: 37.5%;
+  top: 18.75%;
+}
+.note-btn button:first-child:nth-last-child(2):nth-child(2),
+.note-btn button:first-child:nth-last-child(2) ~ *:nth-child(2) {
+  left: 18.75%;
+  top: 37.5%;
+}
+
+.note:hover .note-btn,
+.note-btn:focus-within {
+  width: 10rem;
+  height: 10rem;
 }
 
 #check:hover,
 #trash:hover {
-  transform: scale(1.5);
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
   transition: 0.3s ease-in-out;
-}
-
-.note-box {
-  position: relative;
 }
 
 /* Footer */
 
 footer {
   position: absolute;
-  bottom: -5%;
+  bottom: -10%;
   width: 100%;
   height: 3rem;
   text-align: center;
