add localstorage to theme

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   --primany-color: #2c3333;
   --secondary-color: #3f4e4f;
   --text-color: #dcd7c9;
-  --note: #556e53;
+  --note: #b0a565;
 }
 
 * {
