--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ header h1 {
 }
 .input-box {
   transition: 0.3s ease-in-out;
-  background-color: var(--note) !important;
+  background-color: var(--note);
   padding: 7%;
   border-radius: 4px;
   border: 2px solid;
